finished laptop section

--- a/index.html
+++ b/index.html
@@ -4,10 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <title>e-commerce</title>
+    <link rel="stylesheet" href="styles.css" />
 </head>
 
 <body>
-
+    <h1 class="flex-container">Ayoub Shop</h1>
+    <section class="laptops">
+        <div class="flex-container">
+            <h1 class="laptops-heading">Laptops:</h1>
+            <img src="images/laptop1.jpg" alt="laptop1">
+            <img src="images/laptop2.jpg" alt="laptop2">
+            <img src="images/laptop3.jpg" alt="laptop3">
+            <img src="images/laptop4.jpg" alt="laptop4">
+        </div>
+    </section>
 </body>
 
 </html>
