--- a/index.html
+++ b/index.html
@@ -10,12 +10,21 @@
 <body>
     <h1 class="flex-container">Ayoub Shop</h1>
     <section class="laptops">
+        <h1>Laptops:</h1>
         <div class="flex-container">
-            <h1 class="laptops-heading">Laptops:</h1>
             <img src="images/laptop1.jpg" alt="laptop1">
             <img src="images/laptop2.jpg" alt="laptop2">
             <img src="images/laptop3.jpg" alt="laptop3">
             <img src="images/laptop4.jpg" alt="laptop4">
+        </div>
+    </section>
+    <section class="keyboards">
+        <h1 class="laptops-heading">keyboards:</h1>
+        <div class="flex-container">
+            <img src="images/keyboard1.jpg" alt="keyboard1">
+            <img src="images/keyboard2.jpg" alt="keyboard2">
+            <img src="images/keyboard3.jpg" alt="keyboard3">
+            <img src="images/keyboard4.jpg" alt="keyboard4">
         </div>
     </section>
 </body>
