finished t-shirt section

--- a/index.html
+++ b/index.html
@@ -19,12 +19,21 @@
         </div>
     </section>
     <section class="keyboards">
-        <h1 class="laptops-heading">keyboards:</h1>
+        <h1>keyboards:</h1>
         <div class="flex-container">
             <img src="images/keyboard1.jpg" alt="keyboard1">
             <img src="images/keyboard2.jpg" alt="keyboard2">
             <img src="images/keyboard3.jpg" alt="keyboard3">
             <img src="images/keyboard4.jpg" alt="keyboard4">
+        </div>
+    </section>
+    <section class="T-shirts">
+        <h1>T-shirts:</h1>
+        <div class="flex-container">
+            <img src="images/t-shirt1.jpg" alt="t-shirt1">
+            <img src="images/t-shirt2.jpg" alt="t-shirt2">
+            <img src="images/t-shirt3.jpg" alt="t-shirt3">
+            <img src="images/t-shirt4.jpg" alt="t-shirt4">
         </div>
     </section>
 </body>
